# anl_transformer_t5

./: .gitignore  pyproject.toml
seq2seq_negotiator/: README.md  __init__.py
seq2seq_negotiator/core/: checkpointing.py  config.py  dataset_views.py  ddp.py  metrics.py  signals.py  token_cache.py  trainer_runtime.py  validation.py
seq2seq_negotiator/models/: multitask_t5.py
seq2seq_negotiator/recipes/: __init__.py  base.py  multitask.py  single_target.py
seq2seq_negotiator/scripts/: analyze_eval.py  build_dataset.py  evaluate.py  evaluate_model.py  evaluate_multitask.py  predict.py  train.py  train_hindsight.py  train_hindsight_multitask.py  train_warmstart.py  train_warmstart_multitask.py
